Fix spacing issue of revisions list items in Safari

--- a/client/post-editor/editor-revisions-list/style.scss
+++ b/client/post-editor/editor-revisions-list/style.scss
@@ -109,6 +109,7 @@
 	cursor: pointer;
 	text-align: left;
 	padding: 8px 16px;
+	margin: 0;
 	min-height: 73px;
 	width: 60vw;
 
